<resources>
    <string name="app_name">IGEMer</string>
    <string name="title_activity_login">Login</string>
    <string name="igemer_activity_login">iGEMer</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="txt_forget">forget password</string>
    <string name="btn_login">Login</string>
    <string name="txt_register">register a account</string>
    <string name="txt_title_register">Register</string>
    <string name="txt_haveaccout">Have an account? Login</string>
    <string name="btn_register">Register</string>
    <string name="txt_igem">iGEM</string>
    <string name="title_activity_news_detail_">NewsDetail_Activity</string>
    <string name="tv_header_team">Team Info</string>
    <string name="tv_header_news">News List</string>
    <string name="txt_more">more ></string>
    <string name="tv_header_teams_list">iGEM Team List</string>
    <string name="tv_header_me">Me</string>
    <string name="about">About</string>
    <string name="contact">Contact Us</string>
    <string name="picture">Picture</string>
    <string name="download_picture">Download Picture</string>
</resources>
