<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context="yi.igemer.Login">


    <TextView
        android:id="@+id/tvLoginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:text="@string/igemer_activity_login"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:gravity="center"/>

    <RelativeLayout
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="49dp"
        android:layout_below="@+id/tvLoginTitle"
        android:layout_centerHorizontal="true"
        android:id="@+id/lyEmailGroup"
        android:background="@drawable/border_white_button">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="200dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/imgEmail"
            android:background="@null"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imgEmail"
            android:layout_width="24dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            app:srcCompat="@drawable/mail" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/lyPasswordGroup"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_below="@+id/lyEmailGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/border_white_button">


        <EditText
            android:id="@+id/etPassword"
            android:layout_width="200dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imgPasswordGroup"
            android:layout_width="24dp"
            android:layout_height="22dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            app:srcCompat="@drawable/password" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/lyForgetGroup"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:layout_below="@+id/lyPasswordGroup"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="2dp">

        <TextView
            android:id="@+id/tvForgetPwd"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_toRightOf="@+id/imgQuestion"
            android:text="@string/txt_forget"
            android:textColor="@color/white"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:layout_marginLeft="3dp"/>

        <ImageView
            android:id="@+id/imgQuestion"
            android:layout_width="14dp"
            android:layout_height="14dp"
            app:srcCompat="@drawable/question"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginTop="33dp"
        android:background="@drawable/btn_green_radius"
        android:text="@string/btn_login"
        android:layout_below="@+id/lyForgetGroup"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_register"
        android:textColor="@color/white"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp" />


</RelativeLayout>
