<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context="yi.igemer.Register">

    <TextView
        android:id="@+id/tvHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:text="@string/txt_haveaccout"
        android:textColor="@color/white"
        android:onClick="backToLogin"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_below="@+id/lyPasswordGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:background="@drawable/btn_green_radius"
        android:onClick="registerClick"
        android:text="@string/btn_register"
        android:textColor="@color/white" />

    <RelativeLayout
        android:id="@+id/lyEmailGroup"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_below="@+id/tvLoginTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:background="@drawable/border_white_button">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="200dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/imgEmail"
            android:background="@null"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imgEmail"
            android:layout_width="24dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            app:srcCompat="@drawable/mail" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/lyPasswordGroup"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_below="@+id/lyEmailGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/border_white_button">


        <EditText
            android:id="@+id/etPassword"
            android:layout_width="200dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imgPasswordGroup"
            android:layout_width="24dp"
            android:layout_height="22dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            app:srcCompat="@drawable/password" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlRegister"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:background="@color/green">

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/txt_title_register"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:onClick="backToLogin"
            app:srcCompat="@drawable/close" />
    </RelativeLayout>

</RelativeLayout>
